--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Robi-Project
 
-<img src="CLICK TO SEE PROJECT/Robi1.jpg">
-<img src="CLICK TO SEE PROJECT/Robi2.png">
+![Robi1](./CLICK%20TO%20SEE%20PROJECT/Robi1.jpg)
+![Robi2](./CLICK%20TO%20SEE%20PROJECT/Robi2.png)
 
 ### - Download and watch the .mov file to see the video of the drivers working properly!
